// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cache put cache args object 1`] = `"hi test"`;

exports[`cache put cache args object 2`] = `"hi test"`;

exports[`cache put cache args object 3`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": [
      "{"name":"test"}",
      null,
      null,
    ],
    "keyMap": Map {
      "{"name":"test"}" => 0,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      "hi test",
      null,
      null,
    ],
  },
}
`;

exports[`cache put cache condition + key 1`] = `"hi test"`;

exports[`cache put cache condition + key 2`] = `"hi test"`;

exports[`cache put cache condition + key 3`] = `"hi test"`;

exports[`cache put cache condition + key 4`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": [
      "test",
      null,
      null,
    ],
    "keyMap": Map {
      "test" => 0,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      "hi test",
      null,
      null,
    ],
  },
}
`;

exports[`cache put cache condition + key 5`] = `"hi test"`;

exports[`cache put cache condition + key 6`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": [
      "test",
      null,
      null,
    ],
    "keyMap": Map {
      "test" => 0,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      "hi test",
      null,
      null,
    ],
  },
}
`;

exports[`cache put cache condition 1`] = `"hi test"`;

exports[`cache put cache condition 2`] = `"hi test"`;

exports[`cache put cache condition 3`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": [
      "{"name":"test","id":2}",
      null,
      null,
    ],
    "keyMap": Map {
      "{"name":"test","id":2}" => 0,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      "hi test",
      null,
      null,
    ],
  },
}
`;

exports[`cache put cache condition 4`] = `"hi test"`;

exports[`cache put cache condition 5`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": [
      "{"name":"test","id":2}",
      null,
      null,
    ],
    "keyMap": Map {
      "{"name":"test","id":2}" => 0,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      "hi test",
      null,
      null,
    ],
  },
}
`;

exports[`cache put cache key 1`] = `"hi test"`;

exports[`cache put cache key 2`] = `"hi test"`;

exports[`cache put cache key 3`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 2,
    "keyList": [
      "1",
      "2",
      null,
    ],
    "keyMap": Map {
      "1" => 0,
      "2" => 1,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 2,
    "sizeCalculation": undefined,
    "tail": 1,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      "hi test",
      "hi test",
      null,
    ],
  },
}
`;

exports[`cache put cache key 4`] = `"hi test"`;

exports[`cache put cache key 5`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 1,
    "initialFill": 2,
    "keyList": [
      "1",
      "2",
      null,
    ],
    "keyMap": Map {
      "1" => 0,
      "2" => 1,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      1,
      0,
      0,
    ],
    "size": 2,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      "hi test",
      "hi test",
      null,
    ],
  },
}
`;

exports[`cache put cache key array 1`] = `"hi test"`;

exports[`cache put cache key array 2`] = `"hi test"`;

exports[`cache put cache key array 3`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 2,
    "keyList": [
      "1",
      "2",
      null,
    ],
    "keyMap": Map {
      "1" => 0,
      "2" => 1,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 2,
    "sizeCalculation": undefined,
    "tail": 1,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      "hi test",
      "hi test",
      null,
    ],
  },
}
`;

exports[`cache put cache key array 4`] = `"hi test"`;

exports[`cache put cache key array 5`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 1,
    "initialFill": 2,
    "keyList": [
      "1",
      "2",
      null,
    ],
    "keyMap": Map {
      "1" => 0,
      "2" => 1,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      1,
      0,
      0,
    ],
    "size": 2,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      "hi test",
      "hi test",
      null,
    ],
  },
}
`;

exports[`cache put cache muliple cachenames 1`] = `"hi test"`;

exports[`cache put cache muliple cachenames 2`] = `"hi test"`;

exports[`cache put cache muliple cachenames 3`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": [
      "test",
      null,
      null,
    ],
    "keyMap": Map {
      "test" => 0,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      "hi test",
      null,
      null,
    ],
  },
}
`;

exports[`cache put cache muliple cachenames 4`] = `
MemoryCache {
  "name": "hi2",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": [
      "test",
      null,
      null,
    ],
    "keyMap": Map {
      "test" => 0,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      "hi test",
      null,
      null,
    ],
  },
}
`;

exports[`cache put cache muliple cachenames 5`] = `"hi test2"`;

exports[`cache put cache muliple cachenames 6`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 2,
    "keyList": [
      "test",
      "test2",
      null,
    ],
    "keyMap": Map {
      "test" => 0,
      "test2" => 1,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 2,
    "sizeCalculation": undefined,
    "tail": 1,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      "hi test",
      "hi test2",
      null,
    ],
  },
}
`;

exports[`cache put cache muliple cachenames 7`] = `
MemoryCache {
  "name": "hi2",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 2,
    "keyList": [
      "test",
      "test2",
      null,
    ],
    "keyMap": Map {
      "test" => 0,
      "test2" => 1,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 2,
    "sizeCalculation": undefined,
    "tail": 1,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      "hi test",
      "hi test2",
      null,
    ],
  },
}
`;

exports[`cache put cache muliple cachenames 8`] = `"hi test"`;

exports[`cache put cache muliple cachenames 9`] = `"hi test"`;

exports[`cache put cache muliple cachenames 10`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": [
      "test",
      null,
      null,
    ],
    "keyMap": Map {
      "test" => 0,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      "hi test",
      null,
      null,
    ],
  },
}
`;

exports[`cache put cache muliple cachenames 11`] = `
MemoryCache {
  "name": "hi2",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": [
      "test",
      null,
      null,
    ],
    "keyMap": Map {
      "test" => 0,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      "hi test",
      null,
      null,
    ],
  },
}
`;

exports[`cache put cache muliple cachenames 12`] = `"hi test2"`;

exports[`cache put cache muliple cachenames 13`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 2,
    "keyList": [
      "test",
      "test2",
      null,
    ],
    "keyMap": Map {
      "test" => 0,
      "test2" => 1,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 2,
    "sizeCalculation": undefined,
    "tail": 1,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      "hi test",
      "hi test2",
      null,
    ],
  },
}
`;

exports[`cache put cache muliple cachenames 14`] = `
MemoryCache {
  "name": "hi2",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 2,
    "keyList": [
      "test",
      "test2",
      null,
    ],
    "keyMap": Map {
      "test" => 0,
      "test2" => 1,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 2,
    "sizeCalculation": undefined,
    "tail": 1,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      "hi test",
      "hi test2",
      null,
    ],
  },
}
`;

exports[`cache put cache unless + key + condition 1`] = `1`;

exports[`cache put cache unless + key + condition 2`] = `2`;

exports[`cache put cache unless + key + condition 3`] = `3`;

exports[`cache put cache unless + key + condition 4`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": [
      "3",
      null,
      null,
    ],
    "keyMap": Map {
      "3" => 0,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      3,
      null,
      null,
    ],
  },
}
`;

exports[`cache put cache unless + key + condition 5`] = `1`;

exports[`cache put cache unless + key + condition 6`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": [
      "3",
      null,
      null,
    ],
    "keyMap": Map {
      "3" => 0,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      3,
      null,
      null,
    ],
  },
}
`;

exports[`cache put cache unless + key 1`] = `1`;

exports[`cache put cache unless + key 2`] = `2`;

exports[`cache put cache unless + key 3`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": [
      "2",
      null,
      null,
    ],
    "keyMap": Map {
      "2" => 0,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      2,
      null,
      null,
    ],
  },
}
`;

exports[`cache put cache unless + key 4`] = `1`;

exports[`cache put cache unless + key 5`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": [
      "2",
      null,
      null,
    ],
    "keyMap": Map {
      "2" => 0,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      2,
      null,
      null,
    ],
  },
}
`;

exports[`cache put cache unless 1`] = `1`;

exports[`cache put cache unless 2`] = `2`;

exports[`cache put cache unless 3`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": [
      "{"name":"test","id":2}",
      null,
      null,
    ],
    "keyMap": Map {
      "{"name":"test","id":2}" => 0,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      2,
      null,
      null,
    ],
  },
}
`;

exports[`cache put cache unless 4`] = `1`;

exports[`cache put cache unless 5`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": [
      "{"name":"test","id":2}",
      null,
      null,
    ],
    "keyMap": Map {
      "{"name":"test","id":2}" => 0,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      2,
      null,
      null,
    ],
  },
}
`;

exports[`cache put errors error on condition 1`] = `"hi test test"`;

exports[`cache put errors error on condition 2`] = `"hi test test"`;

exports[`cache put errors error on condition 3`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": [
      null,
      null,
      null,
    ],
    "keyMap": Map {},
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 0,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache put errors error on condition 4`] = `"hi test2 test2"`;

exports[`cache put errors error on condition 5`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": [
      null,
      null,
      null,
    ],
    "keyMap": Map {},
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 0,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache put errors error on key 1`] = `"hi test test"`;

exports[`cache put errors error on key 2`] = `"hi test test"`;

exports[`cache put errors error on key 3`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": [
      null,
      null,
      null,
    ],
    "keyMap": Map {},
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 0,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache put errors error on key 4`] = `"hi test2 test2"`;

exports[`cache put errors error on key 5`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": [
      null,
      null,
      null,
    ],
    "keyMap": Map {},
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 0,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache put simple cache 1`] = `"hi test test"`;

exports[`cache put simple cache 2`] = `"hi test test"`;

exports[`cache put simple cache 3`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": [
      "testtest",
      null,
      null,
    ],
    "keyMap": Map {
      "testtest" => 0,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      "hi test test",
      null,
      null,
    ],
  },
}
`;

exports[`cache put simple cache 4`] = `"hi test2 test2"`;

exports[`cache put simple cache 5`] = `
MemoryCache {
  "name": "hi",
  "options": {
    "max": 3,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 2,
    "keyList": [
      "testtest",
      "test2test2",
      null,
    ],
    "keyMap": Map {
      "testtest" => 0,
      "test2test2" => 1,
    },
    "max": 3,
    "maxEntrySize": 0,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
    ],
    "size": 2,
    "sizeCalculation": undefined,
    "tail": 1,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": [
      "hi test test",
      "hi test2 test2",
      null,
    ],
  },
}
`;
